# python-template

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/: static-check.yml
.github/workflows/: static-check.yml
tools/run_mypy/: mypy.ini  run_mypy.py
